contact us alignment fix

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -3181,6 +3181,7 @@ path.logout-svg {
     height: 4.4em;
     min-width: 16.7em;
     min-height: 4.4em;
+    margin-left: 60px;
     
 }
 
